# vxllm-ingest

./: Dockerfile  README.md  pyproject.toml  run_container.sh
docs/: architecture.md  evals.md  linux.md  mac.md  usage.md  windows.md  writeup.md
vxllm/: cli.py  evaluate.py  main.py
vxllm/document_processing/: extractor.py  loader.py  text_splitter.py
vxllm/indexing/: rag_indexer.py
vxllm/utils/: file_utils.py
